--- a/preambolo.sty
+++ b/preambolo.sty
@@ -10,6 +10,12 @@
 %%  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 %%  GNU General Public License for more details.
 
+\RequirePackage{epigraph}
+\renewcommand{\epigraphflush}{flushleft}
+\setlength{\epigraphrule}{0pt}
+\setlength{\beforeepigraphskip}{-25pt}
+\setlength{\afterepigraphskip}{-25pt}
+
 \RequirePackage{ccicons}
 \RequirePackage{booktabs}
 
