Modificato il colore dei collegamenti ipertestuali

--- a/preambolo.sty
+++ b/preambolo.sty
@@ -46,6 +46,9 @@
   pdfauthor  = {Mosè Giordano, Orlando Iovino, Matteo Leccardi},%
   pdfsubject = {Breve guida all'uso di GNU Emacs e AUCTeX per Windows, GNU Linux e Mac OS},%
   pdfcreator = {LaTeX},%
+  linkcolor  = {blue},
+  citecolor  = {blue!80!black},
+  urlcolor   = {blue},
 }
 
 \providecommand{\emacs}{Emacs}
