(a) Modificata la presentazione alla guida; (b) Modificati alcuni valori di hyperref

--- a/preambolo.sty
+++ b/preambolo.sty
@@ -44,7 +44,7 @@
 \hypersetup{%
   pdftitle   = {Una introduzione a GNU Emacs \& AUCTeX},%
   pdfauthor  = {Mosè Giordano, Orlando Iovino, Matteo Leccardi},%
-  pdfsubject = {Breve guida all'uso di GNU Emacs e AUCTeX per Windows, GNU Linux e Mac OS},%
+  pdfsubject = {Guida tematica all'uso di GNU Emacs e AUCTeX su Windows, GNU Linux e Mac OS},%
   pdfcreator = {LaTeX},%
   linkcolor  = {blue},
   citecolor  = {blue!80!black},
