--- a/introemacs.tex
+++ b/introemacs.tex
@@ -54,21 +54,40 @@ ufficiale \url{http://creativecommons.org/licenses/by-nc-sa/3.0/deed.it}.
 \chapter{Presentazione} 
 \label{chap:presentazione}
 
-In questo articolo vengono brevemente presentati il programma \emacs{} ed il
-pacchetto \auctex{} per le principali piattaforme: Windows, GNU/Linux e Mac
-OS. Dopo una introduzione ai programmi, verranno esposte le modalità per poter
-installare e configurare \emacs{} e \auctex{} per poter scrivere documenti
-\LaTeX{}. L'articolo non ha la pretesa di essere un manuale, bensì un piccolo
-tutorial per far avvicinare gli utenti di \LaTeX{} a questo programma, non così
-troppo complicato come spesso viene indicato.
+Questa guida tematica presenta il programma GNU Emacs ed il pacchetto
+\auctex{} per i principali sistemi operativi: Windows, GNU/Linux e Mac
+OS. Dopo una introduzione al programma, si spiega come installare (e
+configurare alcune funzioni) \emacs{} e \auctex{} per scrivere
+documenti \LaTeX. Per finire si dà qualche accenno per personalizzare e
+rendere più efficiente \emacs.
 
-La realizzazione di questo lavoro a sei mani si è resa possibile
-grazie al sistema di controllo di versione Git (\url{http://git-scm.com}). Per
-poter collaborare si può clonare il progetto con %
-\verb!git clone git://gitorious.org/emacs-tutorial/emacs-tutorial.git!. È
-gradita la segnalazione di errori o refusi.
+Si tenga presente che la guida è ben lontana dall'essere esauriente
+per un editore di testi così importante come Emacs. Per ogni altro
+approfondimento non riportato in queste righe rimandiamo il lettore ai
+manuali ufficiali, in particolare a \cite{emacs:stallman} e
+\cite{auctex:manual}. Speriamo, con queste brevi note, di convincere
+il lettore che Emacs non è poi così complicato come spesso viene
+indicato.
 
-\textcolor{red}{MODIFICARE \lipsum[2]}
+Infine, qualche parola sulla composizione di questa guida tematica,
+scritta a \emph{sei mani} grazie sistema di controllo di versione Git
+(\url{http://git-scm.com}). Chi vuole collaborare può ``clonare'' il
+progetto dal repository ufficiale presente sul sito
+\url{http://gitorious.org/} alla pagina
+\url{https://gitorious.org/emacs-tutorial}. È inoltre gradita la
+segnalazione di errori, refusi, commenti e suggerimenti o ogni altra
+forma di collaborazione.
+
+\begin{tabular}{cc}
+\hspace{.34\textwidth} &                                                              \\
+                       & \textsc{Mosè Giordano}                                       \\
+                       & \textcolor{red}{\texttt{nome dot cognome at dominio dot it}} \\[1.5ex]
+                       & \textsc{Orlando Iovino}                                      \\
+                       & \texttt{orlando dot iovino at yahoo dot it}                  \\[1.5ex]
+                       & \textsc{Matteo Leccardi}                                     \\ 
+                       & \textcolor{red}{\texttt{nome dot cognome at dominio dot it}} \\
+\end{tabular}
+
 
 \newpage\tableofcontents*
 
