--- a/introemacs.tex
+++ b/introemacs.tex
@@ -42,11 +42,11 @@ ufficiale \url{http://creativecommons.org/licenses/by-nc-sa/3.0/deed.it}.
 \end{itemize}
 \textsc{alle seguenti condizioni:}
 \begin{itemize}
-\item[\ccAttribution] Devi attribuire la paternità dell'opera nei modi indicati
+\item[\Large\ccAttribution] Devi attribuire la paternità dell'opera nei modi indicati
       dall'autore o da chi ti ha dato l'opera in licenza e in modo tale da non
       suggerire che essi avallino te o il modo in cui tu usi l'opera.
-\item[\ccNonCommercial] Non puoi usare quest'opera per fini commerciali.
-\item[\ccShareAlike] Se alteri o trasformi quest'opera, o se la usi per crearne
+\item[\Large\ccNonCommercial] Non puoi usare quest'opera per fini commerciali.
+\item[\Large\ccShareAlike] Se alteri o trasformi quest'opera, o se la usi per crearne
       un'altra, puoi distribuire l'opera risultante solo con una licenza
       identica o equivalente a questa.
 \end{itemize}
